--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,9 +38,9 @@
         </ul>
         {% endif %}
         
-        <ul style="">
-          <li><a href="default.asp">Home</a></li>
-          <li><a href="about.asp">About</a></li>
+        <ul class="navLinks">
+          <li id="menu"><a href="default.asp">Home</a></li>
+          <li id="menu"><a href="about.asp">About</a></li>
         </ul>
         
       </header>
