--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,8 +39,8 @@
         {% endif %}
         
         <ul class="navLinks">
-          <li id="menu"><a id="option" href="default.asp">Home</a></li>
-          <li id="menu"><a id="option" href="about.asp">About</a></li>
+          <li id="menu"><a id="option" style="display:block" href="default.asp">Home</a></li>
+          <li id="menu"><a id="option" style="display:block" href="about.asp">About</a></li>
         </ul>
         
       </header>
