--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,9 +38,9 @@
         </ul>
         {% endif %}
         
-        <ul class="navLinks">
-          <li id="menu"><a id="option" style="display:block" href="default.asp">Home</a></li>
-          <li id="menu"><a id="option" style="display:block" href="about.asp">About</a></li>
+        <ul>
+          <li id="menu"><a href="default.asp">Home</a></li>
+          <li id="menu"><a href="about.asp">About</a></li>
         </ul>
         
       </header>
