--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,8 +39,8 @@
         {% endif %}
         
         <ul class="navbar">
-          <li><a href="default.asp">Home</a></li>
-          <li><a href="about.asp">About</a></li>
+          <li><a href="https://Kyle-Frost.github.io/">Home</a></li>
+          <li><a https://Kyle-Frost.github.io/about/">About</a></li>
         </ul>
         
       </header>
