--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,3 +2,9 @@
 ---
 
 @import "{{ site.theme }}";
+.navbar li a {
+  display: block;
+  color: #000;
+  padding: 8px 16px;
+  text-decoration: none;
+}
