--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
         </ul>
         {% endif %}
         
-        <ul class="navbar">
+        <ul class="navbar"style="display:block;">
           <li><a href="https://Kyle-Frost.github.io/">Home</a></li>
           <li><a href="https://Kyle-Frost.github.io/about/">About</a></li>
         </ul>
