--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,9 +38,11 @@
         </ul>
         {% endif %}
         
-        <ul class="navbar"style="display:block;">
+        <ul class="navbar">
+          <div class="navlist">
           <li><a href="https://Kyle-Frost.github.io/">Home</a></li>
           <li><a href="https://Kyle-Frost.github.io/about/">About</a></li>
+          </div>
         </ul>
         
       </header>
