--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,9 +2,6 @@
 ---
 
 @import "{{ site.theme }}";
-.navbar li a {
+.navlist{
   display: block;
-  color: #000;
-  padding: 8px 16px;
-  text-decoration: none;
 }
