--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
         {% endif %}
         
         <ul class="navbar">
-          <div class="navlist">
+          <div class="navlist" style="display:block;">
           <li><a href="https://Kyle-Frost.github.io/">Home</a></li>
           <li><a href="https://Kyle-Frost.github.io/about/">About</a></li>
           </div>
