--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,10 @@
         </ul>
         
       </header>
-      
+      <ul>
+          <li><a href="https://Kyle-Frost.github.io/">Home2</a></li>
+          <li><a href="https://Kyle-Frost.github.io/about/">About</a></li>
+        </ul>
       <section>
 
       {{ content }}
