--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,15 +40,11 @@
         {% endif %}
         
         <ul>
-          <li><a href="https://Kyle-Frost.github.io/">Home</a></li>
-          <li><a href="https://Kyle-Frost.github.io/about/">About</a></li>
+          <li><a style="display:block;"href="https://Kyle-Frost.github.io/">Home</a></li>
+          <li><a style="display:block;"href="https://Kyle-Frost.github.io/about/">About</a></li>
         </ul>
         
       </header>
-      <ul>
-          <li><a href="https://Kyle-Frost.github.io/">Home2</a></li>
-          <li><a href="https://Kyle-Frost.github.io/about/">About</a></li>
-        </ul>
       <section>
 
       {{ content }}
