--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,9 +39,9 @@
         </ul>
         {% endif %}
         
-        <ul>
-          <li style="display:block;"><a href="https://Kyle-Frost.github.io/">Home</a></li>
-          <li style="display:block;"><a href="https://Kyle-Frost.github.io/about/">About</a></li>
+        <ul style="display:block;">
+          <li><a href="https://Kyle-Frost.github.io/">Home</a></li>
+          <li><a href="https://Kyle-Frost.github.io/about/">About</a></li>
         </ul>
         
       </header>
