--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,11 +45,19 @@
         </ul>
         
       </header>
+      <ul>
+          <li><a href="https://Kyle-Frost.github.io/">Home2</a></li>
+          <li><a href="https://Kyle-Frost.github.io/about/">About</a></li>
+        </ul>
       <section>
 
       {{ content }}
 
       </section>
+      <ul>
+          <li><a href="https://Kyle-Frost.github.io/">Home3</a></li>
+          <li><a href="https://Kyle-Frost.github.io/about/">About</a></li>
+        </ul>
       <footer>
         {% if site.github.is_project_page %}
         <p>This project is maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></p>
