--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,10 @@
       <section>
 
       {{ content }}
+        <ul>
+          <li><a href="https://Kyle-Frost.github.io/">Home4</a></li>
+          <li><a href="https://Kyle-Frost.github.io/about/">About</a></li>
+        </ul>
 
       </section>
       <ul>
