--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,6 +42,9 @@
         <ul>
           <li><a href="https://Kyle-Frost.github.io/">Home</a></li>
           <li><a href="https://Kyle-Frost.github.io/about/">About</a></li>
+          <li><a href="https://Kyle-Frost.github.io/about/">About</a></li>
+          <li><a href="https://Kyle-Frost.github.io/about/">About</a></li>
+          <li><a href="https://Kyle-Frost.github.io/about/">About</a></li>
         </ul>
         
       </header>
