--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,9 +42,7 @@
         <ul>
           <li><a href="https://Kyle-Frost.github.io/">Home</a></li>
           <li><a href="https://Kyle-Frost.github.io/about/">About</a></li>
-          <li><a href="https://Kyle-Frost.github.io/about/">About</a></li>
-          <li><a href="https://Kyle-Frost.github.io/about/">About</a></li>
-          <li><a href="https://Kyle-Frost.github.io/about/">About</a></li>
+          <li><a href="https://Kyle-Frost.github.io/test/">test</a></li>
         </ul>
         
       </header>
