--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,6 +44,9 @@
           <li><a href="https://Kyle-Frost.github.io/about/">About</a></li>
           <li><a href="https://Kyle-Frost.github.io/test/">test</a></li>
           <li><a href="https://Kyle-Frost.github.io/test/">test</a></li>
+          <li><a href="https://Kyle-Frost.github.io/test/">test</a></li>
+          <li><a href="https://Kyle-Frost.github.io/test/">test</a></li>
+          <li><a href="https://Kyle-Frost.github.io/test/">test</a></li>
         </ul>
         
       </header>
