--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,3 +20,7 @@ header li a:hover {
   background-color: #555;
   color: white;
 }
+header .active {
+  background-color: #4CAF50;
+  color: white;
+}
