--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,11 +11,13 @@ header li{
  background-color: #f1f1f1;
  width:200px;
  border: 1px solid #555;
+ border-top:0px;
 }
 header ul li+li+li {
     border-right: none;
     width: 200px;
- border: 1px solid #555;
+    border: 1px solid #555;
+    border-top:0px;
 }
 header li a:hover {
   background-color: #555;
@@ -27,4 +29,5 @@ header .active {
 }
 header li:first-child a {
     border-radius: 0px 0 0 0px;
+    border-bottom: 1px;
 }
