--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,7 +21,7 @@ header li a:hover {
   background-color: #555;
   color: white;
 }
-header .active {
+header a:active {
   background-color: #4CAF50;
   color: white;
 }
