--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,6 @@
 @import "{{ site.theme }}";
 header ul{
  width:0px;
- 
  border-left: 0px;
 }
 header li{
@@ -22,4 +21,9 @@ header li a:hover {
   background-color: #555;
   color: white;
 }
-
+header li:first-child a {
+    border-radius: 0 0px 0px 0;
+}
+header li:last-child a {
+    border-radius: 0 0px 0px 0;
+}
