--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,8 +40,8 @@
         {% endif %}
         
         <ul>
-          <li><a href="https://Kyle-Frost.github.io/">Home</a></li>
-          <li><a href="https://Kyle-Frost.github.io/about/">About</a></li>
+          <li><a class="home" href="https://Kyle-Frost.github.io/">Home</a></li>
+          <li><a class="about" href="https://Kyle-Frost.github.io/about/">About</a></li>
           <li><a href="https://Kyle-Frost.github.io/test/">test</a></li>
         </ul>
         
