--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,6 +67,8 @@
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
       ga('create', '{{ site.google_analytics }}', 'auto');
       ga('send', 'pageview');
+    document.querySelectorAll('a[href="'+document.URL+'"]').forEach(function(elem){elem.className += ' current-link')});
+    });
     </script>
     {% endif %}
   </body>
