--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,6 +58,7 @@
         <p><small>Hosted on GitHub Pages</small></p>
       </footer>
     </div>
+    <script>document.querySelectorAll('a[href="'+document.URL+'"]').forE‌​ach(function(elem){e‌​lem.className += ' current-link')});</script>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
     {% if site.google_analytics %}
     <script>
@@ -67,8 +68,6 @@
       })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
       ga('create', '{{ site.google_analytics }}', 'auto');
       ga('send', 'pageview');
-    document.querySelectorAll('a[href="'+document.URL+'"]').forEach(function(elem){elem.className += ' current-link')});
-    });
     </script>
     {% endif %}
   </body>
