--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
         <ul>
           <li><a class="home" href="https://Kyle-Frost.github.io/">Home</a></li>
           <li><a class="about" href="https://Kyle-Frost.github.io/about/">About</a></li>
-          <li><a class="game" href="https://Kyle-Frost.github.io/gamefolder/index.html/">Game</a></li>
+          <li><a class="game" href="https://Kyle-Frost.github.io/gamefolder/index.html/">Strat Roulette</a></li>
         </ul>
         
       </header>
