--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,8 +41,8 @@
         
         <ul>
           <li><a class="home" href="https://Kyle-Frost.github.io/">Home</a></li>
-          <li><a class="about" href="https://Kyle-Frost.github.io/game/">About</a></li>
-          <li><a class="game" href="https://Kyle-Frost.github.io/gamefolder/game/">Strat Roulette</a></li>
+          <li><a class="about" href="https://Kyle-Frost.github.io/gamefolder/game.md/">About</a></li>
+          <li><a class="game" href="https://Kyle-Frost.github.io/gamefolder/index.html/">Strat Roulette</a></li>
         </ul>
         
       </header>
