--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
           <li><a class="home" href="https://Kyle-Frost.github.io/">Home</a></li>
           <li><a class="about" href="https://Kyle-Frost.github.io/about/">About</a></li>
           <li><a class="game" href="https://Kyle-Frost.github.io/gamefolder/index.html">Strat Roulette</a></li>
-          <li><a class="game" href="https://Kyle-Frost.github.io/gamefolder/index.html">Strat Roulette Download</a></li>
+          <li><a class="game" href="{{ site.github.zip_url }}">Strat Roulette Download</a></li>
         </ul>
         
       </header>
