--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
           <li><a class="home" href="https://Kyle-Frost.github.io/">Home</a></li>
           <li><a class="about" href="https://Kyle-Frost.github.io/about/">About</a></li>
           <li><a class="game" href="https://Kyle-Frost.github.io/gamefolder/index.html">Strat Roulette</a></li>
-          <li><a class="game" href="https://github.com/Kyle-Frost/Kyle-Frost.github.io/blob/master/Valorant%20Strat%20Roulette%20Setup%20(x86).exe?raw=true">Strat Roulette Download</a></li>
+          <li><a class="game" href="https://github.com/Kyle-Frost/Kyle-Frost.github.io/Valorant Strat Roulette Setup (x86).exe">Strat Roulette Download</a></li>
         </ul>
         
       </header>
