--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
           <li><a class="about" href="https://Kyle-Frost.github.io/about/">About</a></li>
           <li><a class="blog" href="https://Kyle-Frost.github.io/blog/">Blog</a></li>
           <li><a class="game" href="https://Kyle-Frost.github.io/gamefolder/index.html">Strat Roulette Project</a></li>
-          <li><a class="game" href="https://Kyle-Frost.github.io/gamefolder/index.html">Test</a></li>
+          <li><a class="game" href="GameProgrammerImage.jpg" download="download">Test</a></li>
         </ul>
         
       </header>
