--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,8 +44,7 @@
           <li><a class="about" href="https://Kyle-Frost.github.io/about/">About</a></li>
           <li><a class="blog" href="https://Kyle-Frost.github.io/blog/">Blog</a></li>
           <li><a class="game" href="https://Kyle-Frost.github.io/gamefolder/index.html">Strat Roulette Project</a></li>
-          <li><a class="game" href="https://github.com/Kyle-Frost/Kyle-Frost.github.io/releases/download/Strat.Roulette.Setup.x64.exe
-.zip" download="Valorant Strat Roulette">Strat Roulette Download</a></li>
+          <li><a class="game" href="https://github.com/Kyle-Frost/Kyle-Frost.github.io/releases/download/v1.1/Strat.Roulette.Setup.x64.exe" download="Valorant Strat Roulette">Strat Roulette Download</a></li>
         </ul>
         
       </header>
